<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/svContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/movie"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivMoviePoster"
            android:text="@string/interstellar"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieName"
            android:layout_toRightOf="@+id/ivMoviePoster"
            android:text="@string/sci_fi_adventure" />

        <TextView
            android:id="@+id/tvActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGenre"
            android:layout_toRightOf="@+id/ivMoviePoster"
            android:text="@string/matthew_mcconaughey" />

        <RatingBar
            android:id="@+id/rbMovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivMoviePoster"
            android:layout_marginTop="10dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4.8"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rbMovieRating"
            android:text="@string/movie_description" />

        <TextView
            android:id="@+id/tvMovieLink"
            android:textColor="#0000FF"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="20dp"
            android:text="@string/go_to_interstellar_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>